syntax = "proto3";

option java_package = "org.grpc.generated";

service UpdateService{

  //  rpc singleUpdateMethod(UpdatedRequest) returns (Response);
  rpc updateFirstName(firstName) returns (Response);
  rpc updateLastName(lastName) returns (Response);
  rpc updateContact(contact) returns (Response);
  rpc updateAddress(Address) returns (Response);
  rpc updatePreference(Preference) returns (Response);
  rpc updatePassword(password) returns (Response);
  rpc getProfileById(GetProfileReq) returns (GetProfileResp);
}

message GetProfileReq{
  int32 userid=1;
}

message firstName{
  string firstname = 1;
  int32 id = 2;
}
message lastName{
  string lastname = 1;
  int32 id = 2;
}
message contact{
  string contact = 1;
  int32 id = 2;
}
message password{
  string password = 1;
  int32 id = 2;
}
message Response{
  string responseMessage = 1;
  int32 statusCode = 2;
  Profile profile = 3;
}
message Preference{
  repeated string genre = 1;
  repeated string intrument = 2;
  int32 id = 3;
}
message Address {
  string city=1;
  string state=2;
  string pinCode=3;
  int32 id = 4;
}

message Profile{
  string firstname = 1;
  string lastname = 2;
  string email = 3;
  string contact = 4;
  Address address = 5;
  Preference preference = 6;
}

message GetProfileResp{
  string username=1;
  string firstname = 2;
  string lastname = 3;
  string email = 4;
  string contact = 5;
  string city=6;
  string state=7;
  string pincode=8;
  repeated string genre = 9;
  repeated string instrument = 10;
  int32 statuscode=11;
  string statusMessage=12;
}


